--- a/website/the-doctors/the-first-doctor.html
+++ b/website/the-doctors/the-first-doctor.html
@@ -73,7 +73,9 @@
     	<p><img src="../images/the-doctors/the-first-doctor.jpg" width="300" height="300"></p>
     	<p>The First Doctor is the initial incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by the actor William Hartnell from 1963 to 1966.</p>
     	<p>Within the series' narrative, the Doctor is a centuries-old alien Time Lord from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p>
-    	<p>The First Doctor is the youngest incarnation of the Doctor, but has the most aged physical appearance, having grown old through a natural lifespan. <br>
+    	<p>The First Doctor is the youngest incarnation of the Doctor, but has the most aged physical appearance, having grown old through a natural lifespan. </p>
+    	<p>&nbsp;</p>
+    	<p><br>
     		</p>
     			<!-- InstanceEndEditable -->
 				</div>
