--- a/website/villains/daleks.html
+++ b/website/villains/daleks.html
@@ -20,7 +20,9 @@
 				<td colspan="2"><a href="../index.html">Home,</a> <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2"><!-- InstanceBeginEditable name="Banner" -->Banners<!-- InstanceEndEditable --></td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" -->
+					<p><img src="../images/banners/banner-villains.jpg" width="950" height="150"></p>
+				<!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -48,8 +50,10 @@
 				<td>
 				<div class="doctor-who-content">
 				<!-- InstanceBeginEditable name="Content Area" -->
-					<p>&quot;Dalek&quot; is the sixth episode of the first series of British science fiction television programme Doctor Who that was first broadcast on 30 April 2005. It should not be confused with the first Dalek serial, The Daleks. This episode is the first appearance of the Daleks in the 21st century revival of Doctor Who; it also marks the first appearance of Bruno Langley as companion Adam Mitchell.</p>
-					<p>The episode is set in Utah in the year 2012, in the underground bunker owned by Henry van Statten, a rich collector of alien artifacts. The Doctor encounters his one living exhibit: a creature called &quot;the Metaltron&quot;, which the Doctor is horrified to discover is a surviving Dalek. When the Dalek escapes, the Doctor races against time to stop it from getting to the surface and wreaking havoc on humanity.</p>
+					<h1>The Villains </h1>
+					<h2>Dalek</h2>
+					<p><img src="../images/villains/daleks.jpg" width="300" height="300">&quot;Dalek&quot; is the sixth episode of the first series of British science fiction television programme Doctor Who that was first broadcast on 30 April 2005. It should not be confused with the first Dalek serial, The Daleks. This episode is the first appearance of the Daleks in the 21st century revival of Doctor Who; it also marks the first appearance of Bruno Langley as companion Adam Mitchell.</p>
+<p>The episode is set in Utah in the year 2012, in the underground bunker owned by Henry van Statten, a rich collector of alien artifacts. The Doctor encounters his one living exhibit: a creature called &quot;the Metaltron&quot;, which the Doctor is horrified to discover is a surviving Dalek. When the Dalek escapes, the Doctor races against time to stop it from getting to the surface and wreaking havoc on humanity.</p>
 					<p>The Doctor and Rose land the TARDIS in a massive underground bunker near Salt Lake City, Utah in the year 2012. They were drawn there by a distress signal being transmitted from the bunker. They look around at various alien artifacts that have been set up on display in glass cases. After touching one case, they are surrounded by soldiers who take them to see Henry van Statten, the owner of the collection. </p>
 				<!-- InstanceEndEditable -->
 				</div>
