--- a/website/companions/lady-christina-de-souza.html
+++ b/website/companions/lady-christina-de-souza.html
@@ -20,7 +20,7 @@
 				<td colspan="2"><a href="../index.html">Home,</a> <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banner-companions.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-companions.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -55,8 +55,9 @@
 				<div class="doctor-who-content">
 				<!-- InstanceBeginEditable name="Content Area" -->
 					<h1>The Companions</h1>
-					<p>Lady Christina de Souza was a friend of the Tenth andEleventh Doctors, and had brief adventures with them both. A minor member of the British aristocracy, she was also a thief and an adrenaline junkie. Her exploits were well-publicised — at least in Britain — allowing Rory Williams to recognise her on sight.</p>
-					<p>Christina de Souza was a notorious thief who stole for thrill, rather than profit as most thieves would; she was bored with her aristocratic upbringing. When she met the Tenth Doctor, Christina had already built a considerable reputation and was relentlessly pursued by Detective Inspector Macmillan.</p>
+					<h2>Lady Christina de Souza</h2>
+					<p><img src="../images/companions/lady-shristina-da-souza.jpg" width="300" height="300">Lady Christina de Souza was a friend of the Tenth andEleventh Doctors, and had brief adventures with them both. A minor member of the British aristocracy, she was also a thief and an adrenaline junkie. Her exploits were well-publicised — at least in Britain — allowing Rory Williams to recognise her on sight.</p>
+<p>Christina de Souza was a notorious thief who stole for thrill, rather than profit as most thieves would; she was bored with her aristocratic upbringing. When she met the Tenth Doctor, Christina had already built a considerable reputation and was relentlessly pursued by Detective Inspector Macmillan.</p>
 					<p>At Easter 2009, she stole the prized Cup of Athelstan from the International Gallery in London. Her calling card (a mechanical golden Maneki Neko waving in a mocking manner) alerted the guards to her presence and her associate was quickly found and arrested, which concerned Christina not at all. Unable to find a way to distance herself from the museum because of the many police officers about, she used the 200 bus as an escape vehicle, bribing the driver with her diamond earrings for passage.</p>
 				<!-- InstanceEndEditable -->
 				</div>
