--- a/website/companions/rory-williams.html
+++ b/website/companions/rory-williams.html
@@ -20,7 +20,7 @@
 				<td colspan="2"><a href="../index.html">Home,</a> <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banner-companions.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-companions.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -55,8 +55,9 @@
 				<div class="doctor-who-content">
 				<!-- InstanceBeginEditable name="Content Area" -->
 					<h1>The Companions</h1>
-					<p>Rory Arthur Williams is a fictional character portrayed by Arthur Darvill in the long-running British science fiction television series Doctor Who.</p>
-					<p>Having been introduced at the start of the 5th series, Rory joins the Eleventh Doctor(Matt Smith) as a companion in the middle of Series 5.[2][3][4] As Amy Pond's fiancé, Rory is initially insecure because he believes Amy secretly loves the Doctor more. Later, however, he proves to be a hero in his own right and he and Amy marry. The couple conceive a daughter aboard the Doctor's time machine, the TARDIS, while in the time vortex, but their baby is kidnapped at birth.</p>
+					<h2>Rory Williams</h2>
+					<p><img src="../images/companions/rory-williams.jpg" width="300" height="300">Rory Arthur Williams is a fictional character portrayed by Arthur Darvill in the long-running British science fiction television series Doctor Who.</p>
+<p>Having been introduced at the start of the 5th series, Rory joins the Eleventh Doctor(Matt Smith) as a companion in the middle of Series 5.[2][3][4] As Amy Pond's fiancé, Rory is initially insecure because he believes Amy secretly loves the Doctor more. Later, however, he proves to be a hero in his own right and he and Amy marry. The couple conceive a daughter aboard the Doctor's time machine, the TARDIS, while in the time vortex, but their baby is kidnapped at birth.</p>
 					<p>In &quot;A Good Man Goes to War&quot;, Rory and Amy discover their time-traveler friendRiver Song is actually their daughter Melody Pond. The Doctor and River marry in &quot;The Wedding of River Song&quot;, and Rory becomes the Doctor's father-in-law. In &quot;The Angels Take Manhattan&quot;, the fifth episode of the seventh series, he and Amy are transported back in time by a Weeping Angel, leading to the couple's departure from the series.</p>
 				<!-- InstanceEndEditable -->
 				</div>
