--- a/website/the-doctors/the-eleventh-doctor.html
+++ b/website/the-doctors/the-eleventh-doctor.html
@@ -73,6 +73,7 @@
 					<p><img src="../images/the-doctors/the-eleventh-doctor.jpg" width="300" height="300">The Eleventh Doctor is the eleventh incarnation of the protagonist of the BBC television science fiction series Doctor Who. He is played by Matt Smith,[9] who appears in three series as well as seven specials, over a four-year period. </p>
 <p>Within the series' narrative, the Doctor is a centuries-old alien, a Time Lord from the planet Gallifrey, who travels in timeand space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality.</p>
 					<p>Smith portrays the eleventh such incarnation, a quick-tempered but compassionate man whose youthful appearance is at odds with his more discerning and world-weary temperament. His main companions included feisty Scot Amy Pond (Karen Gillan), her husband Rory Williams (Arthur Darvill) and the mysterious Clara Oswald (Jenna-Louise Coleman).  </p>
+					<p>&nbsp;</p>
 				<!-- InstanceEndEditable -->
 				</div>
 				</td>
