--- a/website/the-doctors/the-second-doctor.html
+++ b/website/the-doctors/the-second-doctor.html
@@ -72,7 +72,9 @@
     	<h2>Patrick Troughton</h2>
     	<p><img src="../images/the-doctors/the-second-doctor.jpg" width="300" height="300">The Second Doctor is the second incarnation of the protagonist of the long-running BBC television science fiction seriesDoctor Who. He was portrayed by character actor Patrick Troughton.</p>
 <p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p>
-    	<p>The transformation into the Second Doctor (originally referred to as a &quot;renewal&quot;), a figure who was the same 'essential' character as the first but with a very different persona, was a turning point in the evolution of the series, and eventually became a critical element of the series' longevity.<br>
+    	<p>The transformation into the Second Doctor (originally referred to as a &quot;renewal&quot;), a figure who was the same 'essential' character as the first but with a very different persona, was a turning point in the evolution of the series, and eventually became a critical element of the series' longevity.</p>
+    	<p>&nbsp;</p>
+    	<p><br>
     		</p>
     			<!-- InstanceEndEditable -->
 				</div>
