--- a/website/the-doctors/the-sixth-doctor.html
+++ b/website/the-doctors/the-sixth-doctor.html
@@ -74,7 +74,8 @@
 <p>The Sixth Doctor is the sixth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by Colin Baker.</p>
     	<p>The Sixth Doctor appeared in three seasons. His appearance in the first of these was at the end of the final episode of The Caves of Androzani which featured the regeneration from the Fifth Doctor and thereafter in the following serial The Twin Dilemma, the end of that season.</p>
     	<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in hisTARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. </p>
-    			<!-- InstanceEndEditable -->
+    	<p>&nbsp;</p>
+				<!-- InstanceEndEditable -->
 				</div>
 				</td>
 				
