--- a/website/the-doctors/the-twelfth-doctor.html
+++ b/website/the-doctors/the-twelfth-doctor.html
@@ -68,10 +68,13 @@
 				<td>
 				<div class="doctor-who-content">
 				<!-- InstanceBeginEditable name="Content Area" -->
-					<h1>The Doctors</h1>
-					<p>The Twelfth Doctor is to be the twelfth incarnation of the protagonist of the long-running BBC television science fictionseries Doctor Who.</p>
-					<p>He is to be portrayed by Peter Capaldi[1] following the departure of Matt Smith's incarnation in the 2013 Christmas special.[2] Within the series' narrative, the Doctor is a time travelling, humanoid alien from a race known as theTime Lords. When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality.</p>
+					<h1>The Twelfth Doctor</h1>
+					<h2>Peter Capaldi</h2>
+					<p><img src="../images/the-doctors/the-twelfth.jpg" width="300" height="300">The Twelfth Doctor is to be the twelfth incarnation of the protagonist of the long-running BBC television science fictionseries Doctor Who.</p>
+<p>He is to be portrayed by Peter Capaldi[1] following the departure of Matt Smith's incarnation in the 2013 Christmas special.[2] Within the series' narrative, the Doctor is a time travelling, humanoid alien from a race known as theTime Lords. When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality.</p>
 					<p>Capaldi will make his first appearance as the Doctor in the 2013 Christmas special episode.[3] He will be accompanied in the eighth series by incumbent companion Clara Oswald (Jenna Coleman).</p>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
 				<!-- InstanceEndEditable -->
 				</div>
 				</td>
