--- a/website/villains/cybermen.html
+++ b/website/villains/cybermen.html
@@ -20,7 +20,7 @@
 				<td colspan="2"><a href="../index.html">Home,</a> <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2"><!-- InstanceBeginEditable name="Banner" -->Banners<!-- InstanceEndEditable --></td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -48,8 +48,10 @@
 				<td>
 				<div class="doctor-who-content">
 				<!-- InstanceBeginEditable name="Content Area" -->
-					<p>The Cybermen are a fictional race of cyborgs who are amongst the most persistent enemies of the Doctor in the British science fiction television programme, Doctor Who. Cybermen were originally a wholly organic species of humanoids originating on Earth's twin planet Mondas that began to implant more and more artificial parts into their bodies as a means of self-preservation. This led to the race becoming coldly logical and calculating, with every emotion deleted from their minds.</p>
-					<p>They were created by Dr. Kit Pedler (the unofficial scientific advisor to the show) and Gerry Davis in 1966, first appearing in the serial The Tenth Planet, the last to feature William Hartnell as the First Doctor. They have since been featured numerous times in their extreme attempts to survive through conquest up until the show was cancelled.</p>
+					<h1>The Villains </h1>
+					<h2>Cybermen</h2>
+					<p><img src="../images/villains/cybermen.jpg" width="300" height="300">The Cybermen are a fictional race of cyborgs who are amongst the most persistent enemies of the Doctor in the British science fiction television programme, Doctor Who. Cybermen were originally a wholly organic species of humanoids originating on Earth's twin planet Mondas that began to implant more and more artificial parts into their bodies as a means of self-preservation. This led to the race becoming coldly logical and calculating, with every emotion deleted from their minds.</p>
+<p>They were created by Dr. Kit Pedler (the unofficial scientific advisor to the show) and Gerry Davis in 1966, first appearing in the serial The Tenth Planet, the last to feature William Hartnell as the First Doctor. They have since been featured numerous times in their extreme attempts to survive through conquest up until the show was cancelled.</p>
 					<p>Following the revival of the show, the Cybermen returned as a parallel universe version and appeared in the 2006 series' two-part story, &quot;Rise of the Cybermen&quot; and &quot;The Age of Steel&quot;, and have been recurring villains in the revived series since. A further redesign took place in the 2013 episode &quot;Nightmare in Silver&quot;, showing technologically advanced Cybermen able to instantly upgrade themselves to fix flaws and weaknesses.</p>
 				<!-- InstanceEndEditable -->
 				</div>
