--- a/website/villains/lady-cassandra.html
+++ b/website/villains/lady-cassandra.html
@@ -20,7 +20,7 @@
 				<td colspan="2"><a href="../index.html">Home,</a> <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2"><!-- InstanceBeginEditable name="Banner" -->Banners<!-- InstanceEndEditable --></td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -48,8 +48,10 @@
 				<td>
 				<div class="doctor-who-content">
 				<!-- InstanceBeginEditable name="Content Area" -->
-					<p>Lady Cassandra O'Brien.?17 is a fictional character from the long-running British science fiction television seriesDoctor Who. The character was voiced by Zoë Wanamaker, and was largely computer-generated,[1] although a physical prop was also used on set.</p>
-					<p>The Ninth Doctor first encountered Cassandra (Lady Cassandra O'Brien.?17) in the episode &quot;The End of the World&quot;. They, along with the rich and powerful of the universe, were on Platform One, a space station orbiting Earth five billion years in the future, which was set up to witness the final destruction of the planet by the expansion of the Sun.</p>
+					<h1>The Villains </h1>
+					<h2>Lady Cassandra </h2>
+					<p><img src="../images/villains/lady-cassandra.jpg" width="300" height="300">Lady Cassandra O'Brien.?17 is a fictional character from the long-running British science fiction television seriesDoctor Who. The character was voiced by Zoë Wanamaker, and was largely computer-generated,[1] although a physical prop was also used on set.</p>
+<p>The Ninth Doctor first encountered Cassandra (Lady Cassandra O'Brien.?17) in the episode &quot;The End of the World&quot;. They, along with the rich and powerful of the universe, were on Platform One, a space station orbiting Earth five billion years in the future, which was set up to witness the final destruction of the planet by the expansion of the Sun.</p>
 					<p>ccording to Cassandra, her parents were the last to be buried &quot;in its soil&quot;. She had been born on Earth and lived on the edge of the &quot;Los Angeles Crevasse&quot;. Cassandra referred to herself as being &quot;a boy&quot; during this time. This could imply she was transgender; however, it may also be possible that the term &quot;boy&quot; in the contemporary vernacular may have lost its gender significance and come to mean simply &quot;child&quot;. Married several times, her life had been extended through a series of 708 plastic surgery operations, until she was nothing but a piece of skin stretched onto a frame, with eyes and a mouth, connected to a brain in a designer jar filled with a preserving solution below.</p>
 				<!-- InstanceEndEditable -->
 				</div>
