--- a/website/the-doctors/the-fourth-doctor.html
+++ b/website/the-doctors/the-fourth-doctor.html
@@ -15,9 +15,10 @@
 	</head>
 	
 	<body>
-		<table>
+		<div class="wrapper">
+		<table width="950">
 			<tr>
-				<td colspan="2"><a href="../index.html">Home,</a> <a href="index.html">The Doctors,</a> <a href="../villains/index.html">Companions, </a><a href="../villains/">Villains </a></td>
+				<td colspan="2"><a href="../index.html">Home,</a> <a href="index.html">The Doctors,</a> <a href="../companions/index.html">Companions, </a><a href="../villains/index.html">Villains </a></td>
 			</tr>
 			<tr>
 				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
@@ -81,5 +82,6 @@
 				
 			</tr>
 		</table>
+		</div>
 	</body>
 <!-- InstanceEnd --></html>
